force-app/main/default/objects/PMC_TriggerSwitches__mdt/PMC_TriggerSwitches__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to bypass trigger operations.</description>
    <label>PMC Trigger Switches</label>
    <pluralLabel>PMC Trigger Switches</pluralLabel>
</CustomObject>