force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>PMC_AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>