force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>PMC_AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>