force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>PMC_AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>