force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>PMC_AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>