force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>PMC_BeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>