force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>PMC_BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>