force-app/main/default/objects/PMC_TriggerSwitches__mdt/fields/PMC_BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>PMC_BeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>